# EpitechNormHelpers

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  RulesToHelper.txt
doc/: RulesToHelper.txt  TODO.txt
epitech-norm-tool/: .clang-format  CMakeLists.txt  README.md
epitech-norm-tool/include/: diagnostic.hpp  executable-type.hpp  managers-fwd.hpp  managers.hpp  options-fwd.hpp  options.hpp  program.hpp  regex-utils.hpp
epitech-norm-tool/include/checks/: checks.hpp  f1.hpp  f2.hpp  f3.hpp  f4.hpp  f5.hpp  f6.hpp  f7.hpp  g1.hpp  g2.hpp  g3.hpp  g4.hpp  g5.hpp  l1.hpp  o1.hpp  o2.hpp  o3.hpp  o4.hpp  stubs.hpp
epitech-norm-tool/include/libgit2wrapper/: errors.hpp  index.hpp
epitech-norm-tool/src/: basename.cpp  diagnostic.cpp  executable-type.cpp  file-utils.cpp  main.cpp  managers.cpp  options.cpp  program.cpp  regex-utils.cpp
epitech-norm-tool/src/checks/: checks.cpp  f1.cpp  f2.cpp  f3.cpp  f4.cpp  f5.cpp  f6.cpp  f7.cpp  g1.cpp  g2.cpp  g3.cpp  g4.cpp  g5.cpp  l1.cpp  o1.cpp  o2.cpp  o3.cpp  o4.cpp  stubs.cpp
epitech-norm-tool/tests/: generate_compile_commands.sh
epitech-norm-tool/tests/data/f2/: failure.c  success.c
epitech-norm-tool/tests/data/g1/: level1-success-3.c  level4-failure-5.c  level4-success-1.c  level5-failure-1.c  level5-success-2.c  level5-success-3.c  level6-failure-1.c  level6-failure-2.c  level6-failure-5.c  level6-success-4.c
epitech-norm-tool/tests/data/o3/: failure.c
include/: basename.hpp  diagnostic.h  diagnostic.hpp  executable-type.hpp  executable_type.hpp  file-utils.hpp  managers.hpp  norm_helper.h  options.hpp  program.hpp  regex-utils.hpp
include/checks/: checks.hpp  g1.hpp  g2.hpp  o1.hpp  o2.hpp  o3.hpp  o4.hpp
include/driver/: norm_helper.h
include/helpers/: xmalloc.h
include/libgit2wrapper/: errors.hpp  global.hpp  index.hpp  repository.hpp
src/: basename.cpp  diagnostic.c  diagnostic.cpp  diagnostic.hpp  executable-type.cpp  executable_type.cpp  file-utils.cpp  main.c  main.cpp  managers.cpp  norm_helper.c  options.cpp  options.hpp  program.cpp  program.hpp  regex-utils.cpp
src/checks/: checks.cpp  g1.cpp  g2.cpp  o1.cpp  o1.hpp  o2.cpp  o3.cpp  o4.cpp
src/driver/: norm_helper.c
src/helpers/: xmalloc.c
tests/: generate_compile_commands.sh
tests/data/g1/: level1-failure-5.c  level2-success-2.c  level3-failure-2.c  level3-failure-4.c  level3-success-1.c  level4-failure-2.c  level4-success-4.c  level5-failure-2.c  level5-failure-4.c  level5-failure-5.c  level5-success-1.c  level5-success-4.c  level6-failure-4.c  level6-success-1.c  level6-success-2.c  level6-success-3.c
tests/data/o3/: header.h
tests/g1/: level1-fail-3.c  level1-failure-2.c  level1-succeed-4.c  level2-failure-4.c  level3-failure-5.c  level3-success-2.c  level3-success-3.c  level4-failure-1.c  level4-failure-4.c  level4-success-2.c  level4-success-3.c
tests/o3/: not-success.c  success.c
util-files/: .clang-format  .clang-tidy  .indent.pro  clang-tidy.txt  gnu-warnings.txt
